force-app/main/default/objects/Account/fields/Business_Category_f__c.field-meta.xml
<CustomField>
    <fullName>Business_Category_f__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
	&quot;Charter_Account&quot;, $Label.BusinessCategorySales,
	&quot;Customer_Account&quot;, $Label.BusinessCategorySales,
	&quot;Global_Account&quot;, $Label.BusinessCategorySales,
	&quot;Agency_Account&quot;, $Label.BusinessCategorySales,
	&quot;Other_Account&quot;, $Label.BusinessCategorySales,
	&quot;Prospect_Account&quot;, $Label.BusinessCategorySales,
	&quot;Regional_Account&quot;, $Label.BusinessCategorySales,
	&quot;Freight_Account&quot;, $Label.BusinessCategoryFreight,
	&quot;&quot;
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Category</label>
    <type>Text</type>
</CustomField>