force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <inlineHelpText>Freight: Please select relevant business type
Corporate:
Prospect - Corporate account not on a deal
Customer - Corporate account on a deal
Agency - An Industry Account</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Leisure &amp; Corporate</fullName>
            </value>
            <value>
                <fullName>Consolidator</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Share of Business</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Commercial Partner</fullName>
            </value>
            <value>
                <fullName>ITO - Inbound Tour Operator</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Charter Broker</fullName>
            </value>
            <value>
                <fullName>Customer Prospect</fullName>
            </value>
            <value>
                <fullName>Agency Prospect</fullName>
            </value>
            <value>
                <fullName>Online Travel Agent (OTA)</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>Freight Forwarder</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Partner Airline</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Mobile Developer</fullName>
            </value>
            <value>
                <fullName>Online Booking Tool</fullName>
            </value>
            <value>
                <fullName>Travel Management Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>