force-app/main/default/objects/Account/fields/Call_Cycle_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Category__c</fullName>
    <description>Account Tier</description>
    <label>Call Cycle Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>deletethis</fullName>
            </value>
            <value>
                <fullName>Category A</fullName>
            </value>
            <value>
                <fullName>Category B</fullName>
            </value>
            <value>
                <fullName>Category C</fullName>
            </value>
            <value>
                <fullName>Category D</fullName>
            </value>
            <value>
                <fullName>Category E</fullName>
            </value>
            <value>
                <fullName>Category F</fullName>
            </value>
            <value>
                <fullName>Category G</fullName>
            </value>
            <value>
                <fullName>Category H</fullName>
            </value>
            <value>
                <fullName>Category I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>