force-app/main/default/objects/Account/fields/Chairmans_Lounge__c.field-meta.xml
<CustomField>
    <fullName>Chairmans_Lounge__c</fullName>
    <description>As an Account Manager, I would like to see the number of contacts that are having Chairman&apos;s Lounge = True.
NOTE: Amend the associated hover help</description>
    <inlineHelpText>As an Account Manager, I would like to see the number of contacts that are having Chairman&apos;s Lounge = True.</inlineHelpText>
    <label>Chairmans Lounge #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>