force-app/main/default/objects/Account/fields/Channel_Member__c.field-meta.xml
<CustomField>
    <fullName>Channel_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Member</label>
    <type>Checkbox</type>
</CustomField>