force-app/main/default/objects/Account/fields/Channel_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Subscription_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Subscription Date</label>
    <type>Date</type>
</CustomField>