force-app/main/default/objects/Account/fields/Closed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunities__c</fullName>
    <description>Used for dashboard components</description>
    <formula>Closed_Renewal_Opportunities_This_FY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Closed Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>