force-app/main/default/objects/Account/fields/Closed_Renewal_Opportunities_This_FY__c.field-meta.xml
<CustomField>
    <fullName>Closed_Renewal_Opportunities_This_FY__c</fullName>
    <inlineHelpText>Used for Reporting</inlineHelpText>
    <label>Closed Renewal Opportunities This FY</label>
    <summaryFilterItems>
        <field>Opportunity.Sub_Type_Level_2__c</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed - Accepted, Closed - Not Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Business and Government</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>