force-app/main/default/objects/Account/fields/Competitor_Airline__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Airline__c</fullName>
    <label>Other Airline Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aer Lingus</fullName>
            </value>
            <value>
                <fullName>Aeropelican</fullName>
            </value>
            <value>
                <fullName>Air Canada</fullName>
            </value>
            <value>
                <fullName>Air China</fullName>
            </value>
            <value>
                <fullName>Air France</fullName>
            </value>
            <value>
                <fullName>Air India</fullName>
            </value>
            <value>
                <fullName>Air Mauritius</fullName>
            </value>
            <value>
                <fullName>Air New Zealand</fullName>
            </value>
            <value>
                <fullName>Air Niugini</fullName>
            </value>
            <value>
                <fullName>Air North</fullName>
            </value>
            <value>
                <fullName>All Nippon Airways</fullName>
            </value>
            <value>
                <fullName>American Airlines</fullName>
            </value>
            <value>
                <fullName>Asiana</fullName>
            </value>
            <value>
                <fullName>British Airways</fullName>
            </value>
            <value>
                <fullName>Cathay Pacific</fullName>
            </value>
            <value>
                <fullName>China Airlines</fullName>
            </value>
            <value>
                <fullName>China Eastern</fullName>
            </value>
            <value>
                <fullName>China Southern</fullName>
            </value>
            <value>
                <fullName>Delta Air</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>Etihad Airways</fullName>
            </value>
            <value>
                <fullName>Eva Airways</fullName>
            </value>
            <value>
                <fullName>Finnair</fullName>
            </value>
            <value>
                <fullName>Garuda Indonesia</fullName>
            </value>
            <value>
                <fullName>Hawaiian Airlines</fullName>
            </value>
            <value>
                <fullName>JAL</fullName>
            </value>
            <value>
                <fullName>KLM</fullName>
            </value>
            <value>
                <fullName>Korean Air</fullName>
            </value>
            <value>
                <fullName>Lan Airlines</fullName>
            </value>
            <value>
                <fullName>LAN Chile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>