force-app/main/default/objects/Account/fields/Concatenated_Fax__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Fax__c</fullName>
    <formula>Fax_Country__c +&quot;&quot;+ Fax_Area__c +&quot;&quot;+ Fax_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Fax</label>
    <type>Text</type>
</CustomField>