force-app/main/default/objects/Account/fields/Concatenated_Phone__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Phone__c</fullName>
    <formula>Phone_Country_Code__c +&quot;&quot;+ Phone_Area__c +&quot;&quot;+ Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>