force-app/main/default/objects/Account/fields/Contract_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Commencement_Date__c</fullName>
    <description>Contract commencement/start date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Commencement Date</label>
    <type>Date</type>
</CustomField>