force-app/main/default/objects/Account/fields/Contract_Commencement_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Commencement_Year__c</fullName>
    <formula>TEXT(YEAR( Contract_Commencement_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Commencement Year</label>
    <type>Text</type>
</CustomField>