force-app/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Used for Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for Executive Summary</inlineHelpText>
    <label>Contract End Date [System]</label>
    <type>Date</type>
</CustomField>