force-app/main/default/objects/Account/fields/Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>