force-app/main/default/objects/Account/fields/Contract_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Group</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Accounts (Contract Group)</relationshipLabel>
    <relationshipName>Contract_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>