force-app/main/default/objects/Account/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate if there is an existing contract with this account</description>
    <inlineHelpText>To indicate if there is an existing contract with this account</inlineHelpText>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>