force-app/main/default/objects/Account/fields/Contracted_flag_updated_date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_flag_updated_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contracted flag last updated [System]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>