force-app/main/default/objects/Account/fields/Contracted_Previously_deletthis__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Previously_deletthis__c</fullName>
    <formula>IF(AND(Contracted__c = False, Contract_Expiry_Date__c &lt;= TODAY()), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Previously (formula)</label>
    <type>Checkbox</type>
</CustomField>