force-app/main/default/objects/Account/fields/Cost_of_Dealing__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Dealing__c</fullName>
    <label>Cost of Dealing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>