force-app/main/default/objects/Account/fields/Count_of_Active_QBR_Opp_System__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_QBR_Opp_System__c</fullName>
    <description>Loyalty commercial field which counts the active QBR opportunities</description>
    <label>Count of Active QBR Opp [System]</label>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Qantas Business Rewards</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>