force-app/main/default/objects/Account/fields/Count_of_All_Pipeline_Opportunites__c.field-meta.xml
<CustomField>
    <fullName>Count_of_All_Pipeline_Opportunites__c</fullName>
    <inlineHelpText>Includes Renewal, New Contract, Variation, Non-Contractual Other</inlineHelpText>
    <label>Count of All Pipeline Opportunites</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualify, Propose &amp; Negotiate</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sub_Type_Level_2__c</field>
        <operation>equals</operation>
        <value>Renewal, Variation, Non-Contractual Other, New Contract</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Business and Government</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>