force-app/main/default/objects/Account/fields/Count_of_open_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_open_opportunities__c</fullName>
    <label>Count of open opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualify, Propose &amp; Negotiate</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sub_Type_Level_2__c</field>
        <operation>equals</operation>
        <value>Renewal, Variation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Business and Government</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>