force-app/main/default/objects/Account/fields/Country_f__c.field-meta.xml
<CustomField>
    <fullName>Country_f__c</fullName>
    <formula>UPPER(BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>