force-app/main/default/objects/Account/fields/CP19_Domestic_Air_Travel_Spend__c.field-meta.xml
<CustomField>
    <fullName>CP19_Domestic_Air_Travel_Spend__c</fullName>
    <description>Created as part of JIRA - 5163</description>
    <label>CP19-Domestic Air Travel Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>