force-app/main/default/objects/Account/fields/CP19_International_MCA_QF_EK_Market_Shar__c.field-meta.xml
<CustomField>
    <fullName>CP19_International_MCA_QF_EK_Market_Shar__c</fullName>
    <label>CP19-International MCA QF/EK Market Shar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>