force-app/main/default/objects/Account/fields/CP19_Intl_Non_MCA_Air_Travel_Spend_TY__c.field-meta.xml
<CustomField>
    <fullName>CP19_Intl_Non_MCA_Air_Travel_Spend_TY__c</fullName>
    <description>Created as part of JIRA - 5163</description>
    <formula>CP19_International_Air_Travel_Spend__c -  CP19_International_MCA_Air_Travel_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP19-Intl Non-MCA Air Travel Spend (TY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>