force-app/main/default/objects/Account/fields/CP19_Intl_Non_MCA_QF_Market_Share_TY__c.field-meta.xml
<CustomField>
    <fullName>CP19_Intl_Non_MCA_QF_Market_Share_TY__c</fullName>
    <description>Created as part of JIRA - 5163</description>
    <formula>IF( CP19_Intl_Non_MCA_Air_Travel_Spend_TY__c !=0, CP19_Intl_Non_MCA_QF_Revenue_TY__c /CP19_Intl_Non_MCA_Air_Travel_Spend_TY__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP19-Intl Non-MCA QF Market Share (TY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>