force-app/main/default/objects/Account/fields/CP19_QF_EK_MCA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CP19_QF_EK_MCA_Revenue__c</fullName>
    <description>Created as part of JIRA - 5163</description>
    <label>CP19-QF/EK MCA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>