force-app/main/default/objects/Account/fields/CP19_QF_International_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>CP19_QF_International_Market_Share__c</fullName>
    <description>Created as part of JIRA - 5163</description>
    <formula>IF(CP19_International_Air_Travel_Spend__c != 0,CP19_Intl_QF_EK_Revenue_TY__c / CP19_International_Air_Travel_Spend__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP19-QF International Market Share</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>