force-app/main/default/objects/Account/fields/CP19_Total_QF_Revenue_TY__c.field-meta.xml
<CustomField>
    <fullName>CP19_Total_QF_Revenue_TY__c</fullName>
    <description>Created as part of JIRA - 5163</description>
    <formula>CP19QFEKRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP19-Total QF Revenue (TY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>