force-app/main/default/objects/Account/fields/CP19QFEKIntlRevenue__c.field-meta.xml
<CustomField>
    <fullName>CP19QFEKIntlRevenue__c</fullName>
    <label>CP19QFEKIntlRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>