force-app/main/default/objects/Account/fields/CP19QFEKRevenue__c.field-meta.xml
<CustomField>
    <fullName>CP19QFEKRevenue__c</fullName>
    <label>CP19QFEKRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>