force-app/main/default/objects/Account/fields/Current_International_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Current_International_Market_Share__c</fullName>
    <label>Current International Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>