force-app/main/default/objects/Account/fields/Current_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Current_Logged_in_User__c</fullName>
    <formula>IF(LEFT(OwnerId, 15) == $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Logged in User</label>
    <type>Checkbox</type>
</CustomField>