force-app/main/default/objects/Account/fields/Current_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Share__c</fullName>
    <inlineHelpText>To be used to capture the existing market share (from PRISM)</inlineHelpText>
    <label>Current Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>