force-app/main/default/objects/Account/fields/Customer_Account_Tier_f__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Tier_f__c</fullName>
    <description>Formula to display the tier icon</description>
    <formula>IF(
CONTAINS(UPPER(TEXT(Customer_Category__c )),&quot;GOLD&quot;),IMAGE(&quot;/resource/QACTierGold&quot;, &apos;QACTierGold&apos;, 35, 105),
IF(
CONTAINS(UPPER(TEXT(Customer_Category__c )),&quot;SILVER&quot;),IMAGE(&quot;/resource/QACTierSilver&quot;, &apos;QACTierSilver&apos;, 35, 105),
IF(
CONTAINS(UPPER(TEXT(Customer_Category__c )),&quot;BRONZE&quot;),IMAGE(&quot;/resource/QACTierBronze&quot;, &apos;QACTierBronze&apos;, 35, 105),
IF(
CONTAINS(UPPER(TEXT(Customer_Category__c )),&quot;WHITE&quot;),IMAGE(&quot;/resource/QACTierWhite&quot;, &apos;QACTierWhite&apos;, 35, 105),
IF(
CONTAINS(UPPER(TEXT(Customer_Category__c )),&quot;RED&quot;),IMAGE(&quot;/resource/QACTierRed&quot;, &apos;QACTierRed&apos;, 35, 105),
IF(
CONTAINS(UPPER(TEXT(Customer_Category__c )),&quot;PLATINUM&quot;),IMAGE(&quot;/resource/QACTierPlatinum&quot;, &apos;QACTierPlatinum&apos;, 35, 105),
&quot;&quot;)
)
)
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
</CustomField>