force-app/main/default/objects/Account/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <description>This field is used to report &amp; track Qantas customers/agencies based on tiers and can ensure appropriate service to them accordingly.</description>
    <inlineHelpText>Based on revenue and market share performance by agency</inlineHelpText>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industry - Platinum</fullName>
            </value>
            <value>
                <fullName>Industry - Gold</fullName>
            </value>
            <value>
                <fullName>Industry - Silver</fullName>
            </value>
            <value>
                <fullName>Industry - Bronze</fullName>
            </value>
            <value>
                <fullName>Industry - Red</fullName>
            </value>
            <value>
                <fullName>Industry - White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>