force-app/main/default/objects/Account/fields/Customer_Category_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category_Indicator__c</fullName>
    <formula>IF(
ISPICKVAL(Customer_Category__c, &quot;Managed&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IF( 
ISPICKVAL(Customer_Category__c,&quot;Serviced&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Category Indicator</label>
    <type>Text</type>
</CustomField>