force-app/main/default/objects/Account/fields/Customer_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ranking__c</fullName>
    <description>Freight - To store the value to display the Customer Rank</description>
    <label>Customer Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>