force-app/main/default/objects/Account/fields/Customer_Sales_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Hierarchy__c</fullName>
    <formula>Customer_Sales_Region__r.Sales_Hierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Sales Hierarchy</label>
    <type>Text</type>
</CustomField>