force-app/main/default/objects/Account/fields/Customer_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Region__c.sales_h_eq_type__c</field>
            <operation>equals</operation>
            <value>Corporate, Corporate-Industry</value>
        </filterItems>
        <filterItems>
            <field>Sales_Region__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Customer Accounts</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>