force-app/main/default/objects/Account/fields/DAPA_Number__c.field-meta.xml
<CustomField>
    <fullName>DAPA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DAPA #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>