force-app/main/default/objects/Account/fields/Dashboard_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Bucket__c</fullName>
    <description>Please change the FY value next Year

Used for QIS reporting</description>
    <formula>IF( (BEGINS(Account_Owner_Role__c,&quot;QF-DOM-Sales-SME-QIS-R&amp;G&quot;) &amp;&amp;  Contracted__c == True),&quot;Retention&quot;,
IF( (BEGINS(Account_Owner_Role__c,&quot;QF-DOM-Sales-SME-QIS-A&amp;G&quot;) &amp;&amp;  Contracted__c == True  &amp;&amp; (Contract_Commencement_Date__c &lt; Date(2018,06,30) ||  Contract_Start_Date__c &lt; Date(2018,06,30)  )),&quot;Realisation&quot;,
IF( (BEGINS(Account_Owner_Role__c,&quot;QF-DOM-Sales-SME-QIS-A&amp;G&quot;) &amp;&amp;  Contracted__c == True  &amp;&amp; (Contract_Commencement_Date__c &gt; Date(2018,06,30) ||  Contract_Start_Date__c &gt; Date(2018,06,30)  ) ),&quot;Acquisition&quot;,&quot;NA&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dashboard Bucket</label>
    <type>Text</type>
</CustomField>