force-app/main/default/objects/Account/fields/Dealing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate if an agency is also a dealing customer for Qantas
//KK 11jun2015 remove this field</description>
    <inlineHelpText>To indicate if an agency is also a dealing customer for Qantas</inlineHelpText>
    <label>Dealing Customer</label>
    <type>Checkbox</type>
</CustomField>