force-app/main/default/objects/Account/fields/Dealing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Flag__c</fullName>
    <description>Is Qantas currently dealing with this customer?</description>
    <label>Corporate Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>