force-app/main/default/objects/Account/fields/Dom_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Dom_Incremental__c</fullName>
    <description>For Internal reporting of QIS Only. It uses the MS targets on publicis end.</description>
    <formula>IF (QF_Domestic_Market_Share__c != 0,(((QF_Domestic_Revenue__c / QF_Domestic_Market_Share__c)*0.01*78)-QF_Domestic_Revenue__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dom Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>