force-app/main/default/objects/Account/fields/Domestic_Air_Travel_Spend__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Air_Travel_Spend__c</fullName>
    <label>Domestic Air Travel Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>